common/ingress/base/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  # annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 5000
      - path: /api/server
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 3000
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-cluster-ip-service
            port:
              number: 3002
      # - path: /pgadmin
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: pgadmin-service
      #       port:
      #         number: 9000
  ingressClassName: nginx
